--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
             <!--CONTENT-->
             <div class="content shadow5 bord-ridge-radius">
 
+                <!--MENU-->
+                <div class="menu">
+                    <div class="icone"></div>
+                    <div class="icone"></div>
+                    <div class="icone"></div>
+                    <div class="icone"></div>
+                </div>
+
                 <!--SECTION PATES-->
                 <div class="control pasta">
 
@@ -76,7 +84,7 @@
                             </div>
                         </div>
                         <!--BOUTON ACTION-->
-                        <button classonclick="produceTagliatelle()">PRODUIRE</button>
+                        <button class="production" onclick="produceTagliatelle()">PRODUIRE</button>
 
                     </div>    
                 </div>
