barre progression tagliatelle

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                         <!--INFORMATIONS-->
                         <div class="infos-production">
                             <h3>TAGLIATELLES</h2>
-                            <span>Quantité : </span>
+                            <span id="taglia">Quantité : </span>
                             <!--BARRE DE PROGRESSION-->
                             <div class="barre-production">
-                                <div class="avancement">0%</div>
+                                <div id="avancement-tagliatelle" class="avancement">0%</div>
                             </div>
                         </div>
                         <!--BOUTON ACTION-->
