--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
 
             <!--ANIMATION SCREEN-->
             <div class="screen shadow5 bord-ridge-radius">
-                <iframe src="https://giphy.com/embed/FSNXUr0ZOUjyU"class="gif"></iframe>
-                <!-- <iframe src="https://giphy.com/embed/fYkiCRjm2GQECQuIz4" class="gif"></iframe>
-                <iframe src="https://giphy.com/embed/KHFV8UJSzZzQk"></iframe> -->
             </div>
 
             <!--CONTENT-->
@@ -73,18 +70,18 @@
                     <!--PASTA-->
                     <div class="tagliatelle section shadow5">
                         <!--IMAGE-->
-                        <img src="assets/pates/tagliatelle.png" alt="">
+                        <img id='imgtag' src="assets/pates/tagliatelle.png" alt="">
                         <!--INFORMATIONS-->
                         <div class="infos-production">
                             <h3>TAGLIATELLES</h2>
-                            <span id="taglia">Quantité : </span>
+                            <span id="taglia">Quantité : <br/></span>
                             <!--BARRE DE PROGRESSION-->
                             <div class="barre-production">
                                 <div id="avancement-tagliatelle" class="avancement">0%</div>
                             </div>
                         </div>
                         <!--BOUTON ACTION-->
-                        <button class="production" onclick="produceTagliatelle()">PRODUIRE</button>
+                        <button class="production shadow5" onclick="produceTagliatelle()">Embaucher<br/>Travailleur</button>
 
                     </div>    
                 </div>
