--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="header flexrow">
 
                 <!--ANNEE-->
-                <div class="annee shadow5 bord-ridge-radius center"><p>ANNEE</p></div>
+                <div class="annee shadow5 bord-ridge-radius center" id="date"><p>ANNEE <br/> 1900</p></div>
 
                 <!--TITRE DU JEU-->
                 <div class="titre flexcol">
@@ -41,7 +41,7 @@
             </div>
 
             <!--ANIMATION SCREEN-->
-            <div class="screen shadow5 bord-ridge-radius">
+            <div class="screen shadow5 bord-ridge-radius" id="screen">
             </div>
 
             <!--CONTENT-->
@@ -113,6 +113,8 @@
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="js/date.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/money.js"></script>
 </body>
 </html>
