--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="header flexrow">
 
                 <!--ANNEE-->
-                <div class="annee shadow5 bord-ridge-radius center" id="date"><p>ANNEE <br/> 1900</p></div>
+                <div class="annee shadow5 bord-ridge-radius center" id="date"></div>
 
                 <!--TITRE DU JEU-->
                 <div class="titre flexcol">
@@ -32,7 +32,7 @@
                         <div class="red"></div>
                     </div>
                     <!--TITRE PRINCIPAL-->
-                    <h1>Coquillette & Co.</h1>
+                    <h1>Coquillette <br/> & Co.</h1>
                 </div>
 
                 <!--ARGENT-->
@@ -42,6 +42,9 @@
 
             <!--ANIMATION SCREEN-->
             <div class="screen shadow5 bord-ridge-radius" id="screen">
+                <div id="pasta">
+                    <button onclick="vendrePates()">vendre</button>
+                </div>
             </div>
 
             <!--CONTENT-->
