--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="js/date.js"></script>
     <script src="js/money.js"></script>
+    <script src="js/stock.js"></script>
     <script src="js/class/produce.js"></script>
     <script src="js/main.js"></script>
 </body>
