--- a/index.html
+++ b/index.html
@@ -69,23 +69,7 @@
                         <span id="oeuf"></span>
                         <span id="eau"></span>
                     </div>
-
-                    <!--PASTA-->
-                    <div class="tagliatelle section shadow5">
-                        <!--IMAGE-->
-                        <img id='imgtag' src="assets/pates/tagliatelle.png" alt="">
-                        <!--INFORMATIONS-->
-                        <div class="infos-production">
-                            <h3>TAGLIATELLES</h3>
-                            <!--BARRE DE PROGRESSION-->
-                            <div class="barre-production">
-                                <div id="avancement-tagliatelle" class="avancement">0%</div>
-                            </div>
-                        </div>
-                        <!--BOUTON ACTION-->
-                        <button class="production shadow5" onclick="produceTagliatelle()">Embaucher<br/>Travailleur</button>
-
-                    </div>    
+    
                 </div>
                 
                 <!--SECTION SHOP-->
@@ -124,7 +108,7 @@
     <script src="js/money.js"></script>
     <script src="js/informations.js"></script>
     <script src="js/stock.js"></script>
-    <script src="js/class/produce.js"></script>
+    <script src="js/class/worker.js"></script>
     <script src="js/class/producer.js"></script>
     <script src="js/main.js"></script>
 </body>
