--- a/index.html
+++ b/index.html
@@ -42,29 +42,28 @@
 
             <!--ANIMATION SCREEN-->
             <div class="screen shadow5 bord-ridge-radius">
-                <div id="production" class="infos"><h2>PRODUCTION</h2></div>
                 <div id="stock" class="infos"><h2>STOCK</h2></div>            
             </div>
 
             <!--MENU-->
             <div class="menu">
-                <button onclick="kitchen()" id="button-kitchen" class="production shadow5"><h2>Cuisine</h2></button>
-                <button onclick="shop()" id="button-shop" class="production shadow5"><h2>Magasin</h2></button>
-                <button onclick="field()" id="button-field" class="production shadow5"><h2>Champs</h2></button>
-                <button onclick="factory()" id="button-factory" class="production shadow5"><h2>Usine</h2></button>
-                <button onclick="bourse()" id="button-bourse" class="production shadow5"><h2>Bourse</h2></button>
+                <button onclick="showField()" id="button-field" class="production shadow5"><h2>Champs</h2></button>
+                <button onclick="showKitchen()" id="button-kitchen" class="production shadow5"><h2>Cuisine</h2></button>
+                <button onclick="showShop()" id="button-shop" class="production shadow5"><h2>Magasin</h2></button>
+                <button onclick="showFactory()" id="button-factory" class="production shadow5"><h2>Usine</h2></button>
+                <button onclick="showBourse()" id="button-bourse" class="production shadow5"><h2>Bourse</h2></button>
             </div>
 
             <!--CONTENT-->
             <div class="content shadow5 bord-ridge-radius">
+                <!--SECTION FIELD-->
+                <div class="control" id="field"></div>    
                 <!--SECTION PATES-->
                 <div class="control" id="kitchen"></div>               
                 <!--SECTION SHOP-->
                 <div class="control" id="shop"></div>
                 <!--SECTION FACTORY-->
-                <div class="control" id="factory"></div>
-                <!--SECTION FIELD-->
-                <div class="control" id="field"></div>                
+                <div class="control" id="factory"></div>            
                 <!--SECTION FRANCHISE-->
                 <div class="control" id="bourse"></div>
             </div>
@@ -76,11 +75,12 @@
 
     <script src="js/sound.js"></script>
     <script src="js/date.js"></script>
-    <script src="js/informations.js"></script>
+    <script src="js/windows.js"></script>
     <script src="js/money.js"></script>
-    <script src="js/kitchen.js"></script>
     <script src="js/class/producer.js"></script>
     <script src="js/class/worker.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/field.js"></script>
+    <!-- <script src="js/kitchen.js"></script> -->
 </body>
 </html>
