--- a/index.html
+++ b/index.html
@@ -42,7 +42,16 @@
 
             <!--ANIMATION SCREEN-->
             <div class="screen shadow5 bord-ridge-radius">
-                <div id="stock" class="infos"><h2>STOCK</h2></div>            
+                <div>
+                    <div id='title-stock'>
+                        <p>S</p>
+                        <p>T</p>
+                        <p>O</p>
+                        <p>C</p>
+                        <p>K</p>
+                    </div>
+                    <div id="stock" class="infos"></div>  
+                </div>          
             </div>
 
             <!--MENU-->
