--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
     <script src="js/class/worker.js"></script>
     <script src="js/main.js"></script>
     <script src="js/field.js"></script>
-    <!-- <script src="js/kitchen.js"></script> -->
+    <script src="js/kitchen.js"></script>
 </body>
 </html>
