--- a/index.html
+++ b/index.html
@@ -18,15 +18,12 @@
         <div class="board bord-ridge-radius">
 
             <!--HEADER-->
-            <div class="header flexrow">
-
-                <!--ANNEE-->
-                <div class="annee shadow5 bord-ridge-radius center" id="date"></div>
+            <div class="header">
 
                 <!--TITRE DU JEU-->
-                <div class="titre flexcol">
+                <div class="titre">
                     <!--DRAPEAU-->
-                    <div class="flag shadow5 flexrow">
+                    <div class="flag shadow5">
                         <div class="blue"></div>
                         <div class="white"></div>
                         <div class="red"></div>
@@ -37,6 +34,8 @@
 
                 <!--ARGENT-->
                 <div class="argent shadow5 bord-ridge-radius center" id="argent"></div>
+                <!--ANNEE-->
+                <div class="annee shadow5 bord-ridge-radius center" id="date"></div>
 
             </div>
 
@@ -89,5 +88,6 @@
     <script src="js/main.js"></script>
     <script src="js/field.js"></script>
     <script src="js/kitchen.js"></script>
+    <script src="js/shop.js"></script>
 </body>
 </html>
